general linear systems exercises

--- a/Linear Algebraic Systems/026-linsys-general.ipynb
+++ b/Linear Algebraic Systems/026-linsys-general.ipynb
@@ -165,6 +165,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3bd358a1",
+   "metadata": {},
+   "source": [
+    "````{exercise}  Ranks of matrices\n",
+    ":label: linsys-general-ex1\n",
+    "For each of the given matrices, find their rank.\n",
+    "\n",
+    "a. $\\bm 1 &0& 2& 3 \\\\ 0& 0 &1 &4 \\\\ 0& 0& 2 &2 \\em$\n",
+    "\n",
+    "b. $\\bm 0& 2& 3 \\\\ 4&2&2 \\\\ 1&0&1 \\\\ 3&4&5\\em$\n",
+    "\n",
+    ":::{hint} Click me for a hint!\n",
+    ":class: dropdown\n",
+    "First, try to put the given matrices in row echelon form!\n",
+    ":::\n",
+    "\n",
+    "```{solution} linsys-general-ex1\n",
+    ":class: dropdown\n",
+    "\n",
+    "To find their rank, we put the given matrices in row echelon form and count the number of pivots.\n",
+    "\n",
+    "a. We use the pivot in position $(2, 3)$ to eliminate below it, getting the matrix\n",
+    "\n",
+    "\\begin{align*} \n",
+    "\\bm \\mathbf 1 &0& 2& 3 \\\\ 0& 0 & \\mathbf 1 &4 \\\\ 0& 0& 0 & \\mathbf {-6} \\em \n",
+    "\\end{align*}\n",
+    "\n",
+    "which is in row echelon form. The pivots (1, 1, and -6) are bolded. We see there are 3 pivots, meaning the rank of the matrx in part (a) is 3.\n",
+    "\n",
+    "b. First, we swap Row 1 and Row 3 so that the first pivot is nonzero, getting the matrix\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\bm 1&0&1 \\\\ 4&2&2 \\\\ 0& 2& 3 \\\\ 3&4&5\\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "Then we use the entry in position $(1, 1)$ to eliminate below it, getting the matrix\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\bm 1&0&1 \\\\ 0&2&-2 \\\\ 0& 2& 3 \\\\ 0&1&2\\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "Then, we use the entry in position $(2, 2)$ to eliminate below it, getting the matrix\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\bm 1&0&1 \\\\ 0&2&-2 \\\\ 0& 0& 5 \\\\ 0&0&3\\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "Finally, we use the entry in postion $(3, 3)$ to eliminate below it, getting the matrix\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\bm \\mathbf 1&0&1 \\\\ 0&\\mathbf 2&-2 \\\\ 0& 0& \\mathbf 5 \\\\ 0&0&0\\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "which is in row echelon form. The pivots (1, 2, and 5) are bolded. We see there are 3 pivots, meaning the rank of the matrx in part (b) is 3.\n",
+    "\n",
+    "\n",
+    "\n",
+    "```\n",
+    "````"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "2e53951c-0ba2-4873-a398-ebc1392d8972",
@@ -274,54 +337,115 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8525c0cb-a973-4e86-8d3b-b77ea2c1235b",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "source": [
-    "## Worked examples"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "6ceffd52-56eb-4625-8fbc-e4696a69e3f4",
    "metadata": {},
    "source": [
-    "````{exercise}  TODO\n",
-    ":label: row-reduce-ex1\n",
-    "Write me\n",
-    ":::{hint} Click me for a hint!\n",
-    ":class: dropdown\n",
-    "Write me\n",
+    "````{exercise}  Solving linear systems in row echelon form\n",
+    ":label: linsys-general-ex2\n",
     "\n",
-    ":::\n",
-    "```{solution} my-exercise\n",
+    "Given an augmented matrix in row echelon form,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\left[ \\begin{array}{cccc|c}\n",
+    "        2 & 3 & -1 & 4 &    7\\\\\n",
+    "        0 & 1 & 5 & -2 &   -3\\\\\n",
+    "        0 & 0 & 0 & 1 &     2\n",
+    "    \\end{array}\\right]\n",
+    "\\end{align*}\n",
+    "\n",
+    "find the set of all values $w, x, y, z$ which solve the corresponding linear system.\n",
+    "\n",
+    "```{solution} linsys-general-ex2\n",
     ":class: dropdown\n",
-    "Write me\n",
+    "\n",
+    "Let's reduce even further, using the pivots to eliminate the entries above them. \n",
+    "\n",
+    "Using the pivot in position (3, 4) to eliminate above it, we get the equivalent system\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\left[ \\begin{array}{cccc|c}\n",
+    "        2 & 3 & -1 & 0 &    -1\\\\\n",
+    "        0 & 1 & 5 & 0 &   1\\\\\n",
+    "        0 & 0 & 0 & 1 &     2\n",
+    "    \\end{array}\\right]\n",
+    "\\end{align*}\n",
+    "\n",
+    "Using the pivot in position (2, 2) to eliminate above it, we get the equivalent system\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\left[ \\begin{array}{cccc|c}\n",
+    "        2 & 0 & -16 & 0 &    -4\\\\\n",
+    "        0 & 1 & 5 & 0 &   1\\\\\n",
+    "        0 & 0 & 0 & 1 &     2\n",
+    "    \\end{array}\\right]\n",
+    "\\end{align*}\n",
+    "\n",
+    "The reduced system is hence given as \n",
+    "\n",
+    "\\begin{align*}\n",
+    "    2w - 16 y &= -4\\\\\n",
+    "    x + 5y &= 1\\\\\n",
+    "    z &= 2\n",
+    "\\end{align*}\n",
+    "\n",
+    "Therefore our solution set is the set of all $(w, x, y, z)$ such that\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    w &= 8y - 4\\\\\n",
+    "    x &= -5y + 1\\\\\n",
+    "    z &= 2\n",
+    "\\end{align*}\n",
+    "\n",
+    "Note that this is an infinite set!\n",
+    "\n",
     "```\n",
     "````"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2c6493b5-6b12-415a-a159-646579661219",
+   "id": "ea29f04a",
    "metadata": {},
    "source": [
-    "````{exercise}  TODO\n",
-    ":label: row-reduce-ex1\n",
-    "Write me\n",
+    "````{exercise} An inconsistent system\n",
+    ":label: linsys-general-ex3\n",
+    "\n",
+    "Show that the system with augmented matrix \n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\left[ \\begin{array}{ccc|c}\n",
+    "        1 & 2 &  -1 & 4\\\\\n",
+    "        -2 & 3 & 1 & 0\\\\\n",
+    "        2 & 4 & -2 & 9\n",
+    "    \\end{array}\\right]\n",
+    "\\end{align*}\n",
+    "\n",
     ":::{hint} Click me for a hint!\n",
     ":class: dropdown\n",
-    "Write me\n",
-    "\n",
+    "Put the augmented matrix in row echelon form!\n",
     ":::\n",
-    "```{solution} my-exercise\n",
+    "\n",
+    "```{solution} linsys-general-ex3\n",
     ":class: dropdown\n",
-    "Write me\n",
+    "\n",
+    "Let's put the augmented matrix in row echelon form to look for an inconsistencies.\n",
+    "\n",
+    "Using the entry in position (1, 1) to eliminate the entries below it, we get the equivalent system\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\left[ \\begin{array}{ccc|c}\n",
+    "        1 & 2 &  -1 & 4\\\\\n",
+    "        0 & 7 & -1 & 8\\\\\n",
+    "        0 & 0 & 0 & 1\n",
+    "    \\end{array}\\right]\n",
+    "\\end{align*}\n",
+    "\n",
+    "We are immediately done, as we have the row $\\left[ \\begin{array}{ccc|c}\n",
+    "        0 & 0 & 0 & 1\n",
+    "    \\end{array}\\right]$, which corresponds to the equation $0x + 0y + 0z = 1$. This is clearly impossible!\n",
+    "\n",
+    "Therefore our system is inconsistent, and has zero solutions.\n",
+    "\n",
     "```\n",
     "````"
    ]
