--- a/Linear Algebraic Systems/026-linsys-general.ipynb
+++ b/Linear Algebraic Systems/026-linsys-general.ipynb
@@ -24,6 +24,11 @@
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
     "keywords: row echelon form, rank of a matrix, no solution, inifinitely many solutions\n",
+    "math:\n",
+    "  '\\vv': '\\mathbf{#1}'\n",
+    "  '\\bm': '\\begin{bmatrix}'\n",
+    "  '\\em': '\\end{bmatrix}'\n",
+    "  '\\R': '\\mathbb{R}'\n",
     "---"
    ]
   },
