modified:   Linear Algebraic Systems/024-linsys-perms.ipynb 	modified:   Linear Algebraic Systems/025-linsys-inverses.ipynb

--- a/Linear Algebraic Systems/024-linsys-perms.ipynb
+++ b/Linear Algebraic Systems/024-linsys-perms.ipynb
@@ -24,6 +24,11 @@
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
     "keywords: systems of linear equations, permutation matrices, interchanging rows\n",
+    "math:\n",
+    "  '\\vv': '\\mathbf{#1}'\n",
+    "  '\\bm': '\\begin{bmatrix}'\n",
+    "  '\\em': '\\end{bmatrix}'\n",
+    "  '\\R': '\\mathbb{R}'\n",
     "---"
    ]
   },
