--- a/Linear Algebraic Systems/025-linsys-inverses.ipynb
+++ b/Linear Algebraic Systems/025-linsys-inverses.ipynb
@@ -24,6 +24,11 @@
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
     "keywords: inverse, Gauss Jordan elimination, identity matrix\n",
+    "math:\n",
+    "  '\\vv': '\\mathbf{#1}'\n",
+    "  '\\bm': '\\begin{bmatrix}'\n",
+    "  '\\em': '\\end{bmatrix}'\n",
+    "  '\\R': '\\mathbb{R}'\n",
     "---"
    ]
   },
