modified:   Vector Spaces and Bases/031-vector_spaces.ipynb

--- a/Vector Spaces and Bases/031-vector_spaces.ipynb
+++ b/Vector Spaces and Bases/031-vector_spaces.ipynb
@@ -15,7 +15,7 @@
     "title: Real Vector Spaces\n",
     "subject: Vector Spaces and Bases\n",
     "subtitle: fundamental abstraction of linear algebra\n",
-    "short_title: How to use this book\n",
+    "short_title: Real vector spaces\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -23,7 +23,7 @@
     "      - University of Pennsylvania\n",
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: vector spaces,\n",
+    "keywords: vector spaces, addition and scaling, axioms\n",
     "math:\n",
     "  '\\vv': '\\mathbf{#1}'\n",
     "  '\\bm': '\\begin{bmatrix}'\n",
