modified:   Linear Algebraic Systems/026-linsys-general.ipynb 	modified:   Vector Spaces and Bases/031-vector_spaces.ipynb 	new file:   Vector Spaces and Bases/032-subspaces.ipynb 	new file:   Vector Spaces and Bases/033-span_lin_ind.ipynb 	new file:   figures/03-span.png

--- a/Linear Algebraic Systems/026-linsys-general.ipynb
+++ b/Linear Algebraic Systems/026-linsys-general.ipynb
@@ -156,6 +156,7 @@
     "## Rank of a matrix\n",
     "\n",
     "```{prf:definition} Rank\n",
+    ":label: rank_defn\n",
     "The _rank_ of a matrix is the numer of pivots in its row echelon form.\n",
     "```\n",
     "\n",
@@ -293,6 +294,7 @@
     "To find the solutions to compatible linear systems, we first split the variables into two separate classes.\n",
     "\n",
     "```{prf:definition}\n",
+    ":label: free_basic_defn\n",
     "In a linear system $U \\textbf{x} = \\textbf{c}$ in row echelon form, \n",
     "1. the variables corresponding to columns containing a pivot are called _basic variables_, while \n",
     "2. the variables corresponding to the columns without a pivot are called _free variables_.\n",
