--- a/Vector Spaces and Bases/032-subspaces.ipynb
+++ b/Vector Spaces and Bases/032-subspaces.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: Real Vector Spaces\n",
+    "title: Subspaces\n",
     "subject: Vector Spaces and Bases\n",
-    "subtitle: fundamental abstraction of linear algebra\n",
-    "short_title: Real vector spaces\n",
+    "subtitle: spaces inside a vector space\n",
+    "short_title: Subspaces\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -23,7 +23,7 @@
     "      - University of Pennsylvania\n",
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: vector spaces, addition and scaling, axioms\n",
+    "keywords: subspaces, closure\n",
     "math:\n",
     "  '\\vv': '\\mathbf{#1}'\n",
     "  '\\bm': '\\begin{bmatrix}'\n",
@@ -39,7 +39,7 @@
    "source": [
     "## Reading\n",
     "\n",
-    "Material related to this page, as well as additional exercises, can be found in ALA Ch. 2.1 and LAA 4.1."
+    "Material related to this page, as well as additional exercises, can be found in ALA Ch. 2.2 and LAA 4.1."
    ]
   },
   {
@@ -50,9 +50,9 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- addition and scaling of real vector spaces\n",
-    "- axioms and operations for generic vector spaces\n",
-    "- examples of different vector spaces"
+    "- what are subspaces\n",
+    "- closure under addition and scalar multiplication\n",
+    "- examples of subspaces and subsets that are not subspaces"
    ]
   },
   {
@@ -60,9 +60,23 @@
    "id": "170438e7",
    "metadata": {},
    "source": [
-    "## Abstraction\n",
+    "## Defining subspaces\n",
     "\n",
-    "In mathematics, we can view seemingly unrelated settings, objects and models at the right level of abstraction which enables us to reason them together in the same way. _Vector Space_ is an abstract notion which unifies a wide range of objects such as ordinary vectors, matrices, spaces of functions such as polynomials, exponentials, trigonometric functions, and inifinite dimensional linear operators. We recommend you to understand these new abstract concepts in the context of ordinary eucledian space such as three-dimensional space ($\\mathbb{R}^3$), and then think about applying to more abstract spaces such as polynomials, vector-valued signals, matrices. "
+    "An appropriate subset of vectors from a larger vector space arise a lot in real life applications and analysing such a smaller set will be useful for us. Such space of vectors living \"inside\" another vector spaces are called subspaces.\n",
+    "\n",
+    "```{prf:definition} Subspace\n",
+    ":label:sub_def\n",
+    "A subspace of a vector space $V$ is a subset $W \\subset V$ that is a vector space in its own right — under the same operations of vector addition and scalar multiplication, and the same zero element.\n",
+    "```\n",
+    "\n",
+    "One simple way to check if a subset $W \\subset V$ of a vector space $V$ is a subsapce:\n",
+    "1. $W$ needs to be non-empty\n",
+    "2. $W$ should satisfy\n",
+    "   \\begin{equation}\n",
+    "   \\label{closure_eqn}\n",
+    "   c \\vv v + d \\vv w \\in W,\n",
+    "   \\end{equation}\n",
+    "   for any vectors $\\vv v, \\vv w \\in W$ and any scalar $c, d \\in \\mathbb{R}$. Subspaces are said to be _closed under addition and scalar multiplication_ because they satisfy [](#closure_eqn)."
    ]
   },
   {
@@ -70,67 +84,26 @@
    "id": "af7f5403-8949-4fd6-92ed-30b6de0894b5",
    "metadata": {},
    "source": [
-    "## Real Vector Spaces\n",
+    ":::{prf:example} Subspaces in $\\mathbb{R}^3$\n",
+    ":label:R3_ex1\n",
     "\n",
-    "Let us consider the space of all $n \\times 1$ real-values vectors, denoted by $\\mathbb{R}^n$. Adding two vectors $\\vv v, \\vv w \\in \\mathbb{R}^n$ can be viewed geometrically through a parallelogram, and multiplication by a scalar $c \\in \\mathbb{R}$ is stretching/shrinking the vector by factor $c$.\n",
+    "1. The trivial subspace $W = \\{\\vv 0\\}$ that contains only the $\\vv 0$ vector. We can check that $c \\vv 0 + d \\vv 0 = \\vv 0 \\in W$ for any scalar $c, d \\in \\mathbb{R}$. This subspace $W$ is commonly referred to as a _point_ at zero.\n",
+    "2. The entire space $\\mathbb{R}^3$: clearly $c \\vv v + d \\vv w \\in \\mathbb{R}^3$ for any vectors $\\vv v, \\vv w \\in \\mathbb{R}^3$ and any scalar $c, d \\in \\mathbb{R}$.\n",
+    "3. The set of all vectors of the form $\\bm v \\\\ 2v \\\\ 3v \\em$. We pick two vectors $\\vv v = \\bm v \\\\ 2v \\\\ 3v \\em, \\vv w = \\bm w \\\\ 2w \\\\ 3w \\em$ and two scalars $c d \\in \\mathbb{R}$. Then,\n",
+    "   $$\n",
+    "   c \\vv v + d \\vv w = \\bm cv+dw \\\\ 2cv + 2dw \\\\ 3cv + 3dw \\em = \\bm cv+dw \\\\ 2(cv + dw) \\\\ 3(cv + dw) \\em = \\bm x \\\\ 2x \\\\ 3x \\em, \\ x = cv+dw \n",
+    "   $$\n",
+    "   is also in our set. This subspace is a _line_ parallel to $\\bm 1 \\\\ 2 \\\\ 3\\em$ (stretched or shrunk by $v$).\n",
+    "4.  The set of all vectors of the form $\\bm x \\\\ y \\\\ 0 \\em$. We pick two vectors $\\vv v = \\bm x \\\\ y \\\\ 0 \\em, \\vv w = \\bm \\hat{x} \\\\ \\hat{y} \\\\ 0 \\em$ and two scalars $c d \\in \\mathbb{R}$. Then,\n",
+    "   $$\n",
+    "   c \\vv v + d \\vv w = \\bm cx+d\\hat{x} \\\\ cy + d\\hat{y} \\\\ 0 \\em = \\bm \\tilde{x} \\\\ \\tilde{y} \\\\ 0 \\em, \\ \\tilde{x} = cx+d\\hat{x}, \\tilde{y} = cy + d\\hat{y} \n",
+    "   $$\n",
+    "   is also in our set. This subspace the _xy-plane_.\n",
     "\n",
-    ":::{figure}../figures/03-vec_add_scale.jpg\n",
-    ":label:vec_add_scale\n",
-    ":alt: Addition and scaling of vectors\n",
-    ":width: 500px\n",
-    ":align: center\n",
-    ":::\n",
+    "In general, subspaces of $\\mathbb{R}^3$ are one of the above four types: a _point_, a _line_, a _plane_, or all of $\\mathbb{R}^3$.\n",
     "\n",
-    "We aim to abstract the above properties so that we can add and scale generic \"vectors\" living in a \"vector space\". \n",
-    "\n",
-    ":::{prf:definition} Vector space operations\n",
-    ":label: vec_space_op\n",
-    "A _vector space_ is a set $V$ equipped with two operations:\n",
-    "1. Addition: adding any pair of vectors $ \\vv v, \\vv w \\in V$ produces another vector $\\vv v + \\vv w \\in V$,\n",
-    "2. Scalar Multiplication: multiplying a vector $\\vv v \\in V$ by a scalar $c \\in \\mathbb{R}$ produces a vector $c \\vv v \\in V$.\n",
-    ":::\n",
-    "\n",
-    ":::{prf:definition} Vector space axioms\n",
-    ":label: vec_space_ax\n",
-    "A _vector space_ $V$ is subject to the following axioms for all $\\vv u, \\vv v, \\vv w \\in V$ and scalars $c, d \\in \\mathbb{R}$\n",
-    "1. Commutativity of Addition: $\\vv v + \\vv w = \\vv w + \\vv v$.\n",
-    "2. Associativity of Addition: $\\vv u + (\\vv v + \\vv w) = (\\vv u + \\vv v) + \\vv w$.\n",
-    "3. Additive Identity: There is a zero element $\\vv 0 \\in V$ satisfying $\\vv v + \\vv 0 = \\vv v = \\vv 0 + \\vv v$.\n",
-    "4. Additive Inverse: For each $\\vv v \\in V$ there is an element $− \\vv v \\in V$ such that\n",
-    "$\\vv v + (− \\vv v) = \\vv 0 = (− \\vv v) + \\vv v$.\n",
-    "5. Distributivity: $( c +  d) \\vv v = (c \\vv v) + (d \\vv v)$, and $c (\\vv v + \\vv w) = (c \\vv v) + (c \\vv w)$.\n",
-    "6. Associativity of Scalar Multiplication: $c (d \\vv v) = (c d) \\vv v$.\n",
-    "7. Unit for Scalar Multiplication: the scalar $1 \\in \\mathbb{R}$ satisﬁes $1 \\vv v =\\vv v$.\n",
-    ":::\n",
-    "\n",
-    "The following properties can be deduced from the [axioms](#vec_space_ax).\n",
-    "\n",
-    ":::{note} Properties\n",
-    ":label: vec_space_prop\n",
-    "1. The $\\vv 0$ vector in [axiom](#vec_spac_ax) 3. is unique.\n",
-    "2. The additive inverse $-\\vv v$ in [axiom](#vec_spac_ax) 4., called the _negative of $\\vv v$_ is unique.\n",
-    "3. $$0 \\vv v = \\vv 0$ ($0$ is a scalar, $\\vv 0$ is a vector).\n",
-    "4. $-1 \\vv v = -\\vv v$.\n",
-    "5. $c \\vv 0 = \\vv 0$ for any $c \\in \\mathbb{R}$.\n",
-    "6. If $c \\vv v = \\vv 0$, then either $c=0$ or $\\vv v = \\vv 0$.\n",
-    ":::"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3b7618b1-97c9-4576-8c76-6a388a8b0e09",
-   "metadata": {},
-   "source": [
-    ":::{prf:example} Eucledian Space $\\mathbb{R}^n$\n",
-    ":label:Rn_ex1\n",
-    "\n",
-    "$\\mathbb{R}^n$ is the space of $n \\times 1$ column vectors with addition, scaling and the $\\vv 0$ vector given below.\n",
-    "$$\n",
-    "\\vv v = \\bm v_1 \\\\ v_2 \\\\ \\vdots \\\\ v_n \\em, \\vv w = \\bm w_1 \\\\ w_2 \\\\ \\vdots \\\\ w_n \\em, \\vv v + \\vv w = \\bm v_1 + w_1 \\\\ v_2 + w_2 \\\\ \\vdots \\\\ v_n + w_n \\em, c \\vv v = \\bm c v_1 \\\\ c v _2 \\\\ \\vdots \\\\ c v_n\\em, \\vv 0 = \\bm 0 \\\\ 0 \\\\ \\vdots \\\\ 0 \\em\n",
-    "$$\n",
-    "\n",
-    "```{note}\n",
-    "If it is difficult to understand generic vector spaces, think about $\\mathbb{R}^3$, since we are using the same geometric ideas to add and scale encodings of different objects.\n",
+    "```{warning}\n",
+    "Lines and planes not passing through the origin are **not** subspaces. Any subspace of $\\mathbb{R}^3$ should go through the origin.\n",
     "```\n",
     ":::"
    ]
@@ -146,24 +119,12 @@
     "tags": []
    },
    "source": [
-    ":::{prf:example}Real $m \\times n$ matrices $\\mathbb{R}^{m \\times n}$\n",
-    ":label:Rmn_ex2\n",
+    ":::{prf:example} Subsets of $\\mathbb{R}^3$ that are **not** subspaces\n",
+    ":label:R3_ex2\n",
     "\n",
-    "$\\mathbb{R}^n$ is the space of $n \\times 1$ column vectors with addition, scaling and the $\\vv 0$ vector given below.\n",
-    "$$\n",
-    "\\vv v = \\bm v_1 \\\\ v_2 \\\\ \\vdots \\\\ v_n \\em, \\vv w = \\bm w_1 \\\\ w_2 \\\\ \\vdots \\\\ w_n \\em, \\vv v + \\vv w = \\bm v_1 + w_1 \\\\ v_2 + w_2 \\\\ \\vdots \\\\ v_n + w_n \\em, c \\vv v = \\bm c v_1 \\\\ c v _2 \\\\ \\vdots \\\\ c v_n\\em, \\vv 0 = \\bm 0 \\\\ 0 \\\\ \\vdots \\\\ 0 \\em\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "$\\mathbb{R}^{m \\times n}$ forms a _vector space_ under matrix additon and scalar multiplication. The $O$ \"vector\" is the matrix of all zeros $O \\in \\mathbb{R}^{m \\times n}$.\n",
-    "\n",
-    "```{warning}\n",
-    "[Matrix-matrix multiplication](./022-linsys-matvec.ipynb#matmul-def1) is **not** a vector space operation. Vector spaces only allow scalar multiplication.\n",
-    "```\n",
-    "\n",
-    "```{note}\n",
-    "The vector space $\\mathbb{R}^n$ is really an $\\mathbb{R}^{n \\times 1}$ matrix. Hence, the [Eucledian space](#Rn_ex1) is a special case of [Real matrices](#Rmn_ex2).\n",
-    "```\n",
+    "1. The set of all vectors of the form $\\bm x \\\\ y \\\\ 1 \\em$, because $\\vv 0$ is not in this set.\n",
+    "2. The non-negative orthant $\\theta^{+} = \\{x \\geq 0, y \\geq 0, z \\geq 0\\}$. For any $\\vv x \\in \\theta^{+}, -\\vv x \\notin \\theta^{+}$. Hence, $\\theta^{+}$ is not closed under scalar multiplication.\n",
+    "3. The unit sphere $\\mathcal{S}^2 = \\{x^2 + y^2 + z^2 = 1\\}$ because $\\vv 0 \\notin \\mathcal{S}^2$. In general, curved surfaces like the paraboloid ${P = \\{z = x^2 + y^2\\}}$ are not subspaces. Think about connecting two points by a straight line and relate to the closure property. \n",
     ":::"
    ]
   },
