modified:   Vector Spaces and Bases/033-span_lin_ind.ipynb 	new file:   Vector Spaces and Bases/034-basis_dim.ipynb

--- a/Vector Spaces and Bases/033-span_lin_ind.ipynb
+++ b/Vector Spaces and Bases/033-span_lin_ind.ipynb
@@ -23,7 +23,7 @@
     "      - University of Pennsylvania\n",
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: subspaces, closure\n",
+    "keywords: linear combination, span, linear independence, dependence, linear systems\n",
     "math:\n",
     "  '\\vv': '\\mathbf{#1}'\n",
     "  '\\bm': '\\begin{bmatrix}'\n",
@@ -52,7 +52,8 @@
     "By the end of this page, you should know:\n",
     "- what are linear combination of vectors\n",
     "- what is a _span_ of a set of vectors\n",
-    "- what is linear dependence (and independence)"
+    "- what is linear dependence (and independence)\n",
+    "- how to check linear dependence"
    ]
   },
   {
