modified:   Vector Spaces and Bases/031-vector_spaces.ipynb 	modified:   Vector Spaces and Bases/034-basis_dim.ipynb

--- a/Vector Spaces and Bases/031-vector_spaces.ipynb
+++ b/Vector Spaces and Bases/031-vector_spaces.ipynb
@@ -226,7 +226,7 @@
    "id": "7c9d85a0-a4be-4d75-abbc-9feca6236838",
    "metadata": {},
    "source": [
-    ":::{prf:example}Real Polynomials of degree $\\leq n$ $P^{(n)}$\n",
+    ":::{prf:example}Real Polynomials of degree $\\leq n$: $P^{(n)}$\n",
     ":label:poly_ex5\n",
     "\n",
     "Consider the space\n",
