--- a/Vector Spaces and Bases/032-subspaces.ipynb
+++ b/Vector Spaces and Bases/032-subspaces.ipynb
@@ -133,26 +133,28 @@
    "id": "fed8844c-73fe-4b07-b153-ddd09659c72c",
    "metadata": {},
    "source": [
-    "::::{prf:example}Sampled functions over an interval\n",
-    ":label:fns_ex3\n",
+    ":::{prf:example} Subspaces of discrete time signals\n",
+    ":label:subspace-ex3\n",
     "\n",
-    "In digital signal processing and applications such as communication, we work with sampled versions of the functions $f(t)$ over the time interval $[0, 1]$ so that we can store them on a computer. This is obtained by sampling $f(t)$ at times $\\{0, \\tau, 2\\tau, \\ldots, T\\tau = 1\\}$, where $\\tau$ is the sampling period, $\\frac{1}{\\tau} = T$ is the number of samples taken over $[0, 1]$. This gives a [vector](#Rn_ex1) of size $T+1$:\n",
-    "$$\n",
-    "\\vv f = \\bm f(0) \\\\ f(\\tau) \\\\ f(2\\tau) \\\\ \\vdots \\\\ f(T\\tau) \\em.\n",
-    "$$\n",
-    " \n",
-    ":::{figure}../figures/03-function_sampled.jpg\n",
-    ":alt: Sampled function\n",
-    ":width: 300px\n",
-    ":align: center\n",
-    ":::\n",
+    "Here, our base vector space is \\mathbb S, the space of all doubly infinite signals $\\{y_k\\} = (..., y_{-2}, y_{-1}, y_0, y_1, y_2 ...)$.\n",
     "\n",
-    "Hence, adding sampled functions $f(t)$ and $g(t)$, and scaling functions $f(t)$ follow the same operations as given in [](#Rn_ex1) for the corresponding vectors $\\vv f$ and $\\vv g$. Sampling the zero function $z(t) = 0$ gives the usual $\\vv 0$ vector. \n",
+    "1. The set $\\mathbb{S}_{0:T}$ that are zero for all indices except $k = \\{ 0, 1, 2, ..., T\\}$: if $\\{ y_k \\}, \\{z_k\\} \\in \\mathbb S_{0:T}$ then $c\\{y_k\\} + d\\{z_k\\} = \\{cy_k + dz_k\\}$ is also zero for all indices not in $\\{0, 1, ..., T\\}$ for any $c, d, \\in \\mathbb R$.\n",
     "\n",
-    "```{note}\n",
-    "In summary, the space of functions sampled at the **same $T+1$ time points** over an interval is $\\mathbb{R}^{T \\times 1}$.\n",
-    "```\n",
-    "::::"
+    "2. The set $\\Sigma_0$ of signals that sum to zero, i.e., $\\{y_k\\} \\in \\Sigma_0$ if and only if \n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\sum_{k = -\\infty}^{\\infty}{y_k} = 0\n",
+    "\\end{align*}\n",
+    "\n",
+    "To check this, we compute the sum of $c\\{y_k\\} + d\\{z_k\\} = \\{cy_k + dz_k\\}$:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\sum_{k = -\\infty}^{\\infty}{cy_k + dz_k} &= c\\sum_{k = -\\infty}^{\\infty}{y_k} + d\\sum_{k = -\\infty}^{\\infty}{z_k} \\\\\n",
+    "    &= c\\cdot 0 + d\\cdot 0 \\tag{since $\\sum y_k = \\sum z_k = 0 $}\\\\\n",
+    "    &= 0 \n",
+    "\\end{align*}\n",
+    "\n",
+    ":::"
    ]
   },
   {
@@ -160,107 +162,38 @@
    "id": "5c276074-315d-409e-a636-d88d8a208e44",
    "metadata": {},
    "source": [
-    ":::{prf:example}Doubly infinite sequences of numbers $\\mathbb{S}$\n",
-    ":label:inf_seq_ex4\n",
+    ":::{prf:example} Subspaces of matrices\n",
+    ":label:subspace-ex4\n",
     "\n",
-    "Let $\\mathbb{S}$ be the space of all _doubly infinite sequences of numbers_:\n",
-    "\\begin{equaiton}\n",
-    "\\label{ex4_eqn}\n",
-    "\\{y_k\\} := \\{\\ldots, y_{-2}, y_{-1}, y_0, y_1, y_2, \\ldots\\}.\n",
-    "end{equation}\n",
-    "The sequences [](#ex4_eqn) can be interpreted as a signal sampled over an undefined interval, which appears in areas such as control theory, signal processing, biology, optics. \n",
-    "```{note}\n",
-    "$\\mathbb{S}$ is also known as the _space of discrete time signals_.\n",
-    "```\n",
-    "We define\n",
-    "1. addition as $\\{y_k\\} + \\{z_k\\} = \\{y_k + z_k\\}$ (element-wise), and\n",
-    "2. scalar multiplication as $c\\{y_k\\} = \\{cy_k\\}$ (scale each entry).\n",
+    "The following are easily verified to be subspaces of $\\mathbb R^{m \\times n}$.\n",
     "\n",
-    "```{note} Not finite\n",
-    "Each each vector $\\{y_k\\} \\in \\mathbb{S}$ has infinitely many elements, unlike our previous examples. Nevertheless, we can still think of $\\{y_k\\}$ as an \"arrow\" that adds and scales according to [](#vec_add_scale).\n",
-    "```\n",
-    ":::\n"
+    "1. The space $\\text{Sym}^n$ of symmetric matrices, i.e. $n \\times n$ matrices $M$ satisfying $m_{ij} = m_{ji}$ for all $i, j = 1, ..., n$. For example, $\\text{Sym}^2$ re matrices of the form \n",
+    "\n",
+    "\\begin{align*}\n",
+    "    M = \\bm a& b \\\\ b & c \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "2. The space of diagonal matrices, i.e., $n \\times n$ matrices $M$ with $m_{ij} = 0$ if $i \\neq j$.\n",
+    "\n",
+    "3. The space of upper triangular matrices and the space of lower triangular matrices are both subspaces.\n",
+    "\n",
+    ":::"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7c9d85a0-a4be-4d75-abbc-9feca6236838",
+   "id": "ddecbbf0",
    "metadata": {},
    "source": [
-    ":::{prf:example}Real Polynomials of degree $\\leq n$ $P^{(n)}$\n",
-    ":label:poly_ex5\n",
+    ":::{prf:example} Subspaces of function space $\\mathcal F(I)$\n",
+    ":label:subspace-ex5\n",
     "\n",
-    "Consider the space\n",
+    "Here our base space is $\\mathcal F(I)$, the space of real-valued functions defined on the interval $I$.\n",
     "\n",
-    "\\begin{equation}\n",
-    "\\label{eqn_ex5}\n",
-    "P^{(n)} = \\{p(x) = a_nx^n + a_{n-1}x^{n-1} + \\ldots + a_1x +  a_0\\}\n",
-    "\\end{equation}\n",
-    "consisting of all real polynomials of degree $\\leq n$. The polynomial coefficients $a_n, a_{n-1}, \\ldots, a_1, a_0$ can be any real numbers. For example, $P^{(1)} = \\{p(x) = a_1x + a_0\\}$ is the set of all linear polynomials, since given any linear equation $q(x) = mx + b$, setting $a_1 = m$ and $a_0 = b$ shows that $q(x) \\in P^{(1)}$. The vector space operations are defined as below.\n",
-    "1. Addition:\n",
-    "   \\begin{equation}\n",
-    "   \\label{poly_add}\n",
-    "   p(x) &= a_nx^n + a_{n-1}x^{n-1} + \\ldots + a_1x +  a_0, \\\\ q(x) &= b_nx^n + b_{n-1}x^{n-1} + \\ldots + b_1x +  b_0, \\\\\n",
-    "   p(x) + q(x) &= (a_n+b_n)x^n + (a_{n-1}+b_{n-1})x^{n-1} + \\ldots + (a_{1}+b_{1})x +  (a_0+b_0), \\\\\n",
-    "   p(x) + q(x) &= d_nx^n + d_{n-1}x^{n-1} + \\ldots + d_{1}x +  d_0, \\\\ d_i &= a_i + b_i\n",
-    "   \\end{equation}\n",
-    "2. Scalar multiplication:\n",
-    "   \\begin{equation}\n",
-    "   \\label{poly_scalec}\n",
-    "   cp(x) &= ca_nx^n + ca_{n-1}x^{n-1} + \\ldots + ca_1x +  ca_0, \\\\\n",
-    "   cp(x) &= \\tilde{a}_{n} x^n + \\tilde{a}_{n-1} x^{n-1} + \\ldots + \\tilde{a}_1 x + \\tilde{a}_0, \\\\\n",
-    "   \\tilde{a}_i &= ca_i\n",
-    "   \\end{equation}\n",
+    "1. $P^{(n)}$ the space of polynomials (of degree at most $n$), defined over $I$. The $0$ function is in $P^{(n)}$, and $P^{(n)}$ is a vector space contained in $\\mathcal F(I)$.\n",
     "\n",
-    "```{note}\n",
-    "Addition and scaling of polynomials is very similar to how we did for ordinary vectors. This is not a coincidence at all! We will see why later! \n",
-    "```\n",
-    "\n",
-    "Zero polynomial satisfies $a_n = a_{n-1} = \\ldots = a_1 = a_0 = 0$. Vectors in $P^{(n)}$ are _polynomial functions_ and you should think of them as \"arrows\", similar to ordinary vectors, living in the space of polynomials. \n",
-    "\n",
-    "```{warning} $n-$degree polynomials\n",
-    "The space of $n-$degree polynomials is **not** a vector space. For example, consider $p(x) = x^2 + 1$ and $q(x) = -x^2 + x$, both of degree $2$, but $p(x) + q(x) = x + 1$ that has degree 1! Hence, $P^{(n)}$ is defined as polynomials of degree $\\leq n$ so that we do not go out of the space when we add elements.\n",
-    "```\n",
-    "\n",
-    "```{warning}\n",
-    "A scalar $c \\in \\mathbb{R}$ and the constant polynomial $a_0 \\in P^{(n)}$ are different objects, even though they look similar! You should think of $a_0$ as an \"arrow\" in $P^{(n)}$ and not a scalar. \n",
-    "```\n",
-    "\n",
-    ":::\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e1f65f6b-f37e-4636-9c8a-ae463b8aee23",
-   "metadata": {},
-   "source": [
-    ":::{prf:example}Real valued functions over an interval $\\mathcal{F}(I)$\n",
-    ":label:func_ex6\n",
-    "\n",
-    "Let $I \\subset \\mathbb{R}$ be an interval (a common choice is $[0, 1]$, the closed interval from $0$ to $1$). The _function space_ $\\mathcal{F}(I)$ is defined as a vector space whose elements are all real-valued function $f(x)$ defined for all $x \\in I$. The operations are\n",
-    "\n",
-    "1. Addition in the usual way $(f+g)(x) = f(x) + g(x)$ for all $x \\in I$\n",
-    "2. Scalar multiplication $(cf)(x) = c f(x)$\n",
-    "\n",
-    "```{note}\n",
-    "$(f+g)$ denotes the new function obtained by adding $f$ and $g$. We define the value of $f+g$ at $x \\in I$ by $(f+g)(x) = f(x) + g(x)$. The vector elements here are $f+g, f, g$, while the variable $x$ is not related to the vector space. The variable $x$ is used only to define how $f+g$ is computed from $f$ and $g$. A useful trick is to not write out the argument $x$ when performing vector space operations.   \n",
-    "```\n",
-    "\n",
-    "#### Example\n",
-    "\n",
-    "Let $f(x) = 1  +\\sin(2x)$ and $g(x) = 2 + 0.5x$ and set $I = [0, 1]$. Then, $f, g \\in \\mathcal{F}(I)$. To compute $f+g$,\n",
-    "\\begin{equation}\n",
-    "\\label{func_ex}\n",
-    "(f+g)(x) &= f(x) + g(x), \\\\\n",
-    "&= 1 + \\sin(2x) + 2 + 0.5x, \\\\\n",
-    "(f+g)(x) &= 3 + 0.5x + \\sin(2x)\n",
-    "\\end{equation}\n",
-    "From [](#func_ex), the function $f+g$ is defined for all $x \\in [0, 1]$. Hence, $f+g \\in \\mathcal{F}(I)$.\n",
-    "\n",
-    "```{tip} \n",
-    "If the above discussion is confusing, pretend that we are using sampled version $\\vv f$ and $\\vv g$ of $f(t)$ and $g(t)$, respectively, but with possibly infinite and continuous elements. Adding $\\vv f + \\vv g$ gives me a new vector, just like adding $f + g$ gives me a new function\n",
-    "```\n",
-    ":::\n"
+    "2. The spcae $C^0(I)$ of all continuous functions defined on $I$. Showing closure of this space relies on knowing that if $f(x)$ and $g(x)$ are continous, then so is $cf(x) + dg(x)$ for any $c, d\\in \\mathbb{R}$, something you may have seen in Math 1400/1410.\n",
+    ":::"
    ]
   }
  ],
