033-span_lin_ind: added examples

--- a/Vector Spaces and Bases/033-span_lin_ind.ipynb
+++ b/Vector Spaces and Bases/033-span_lin_ind.ipynb
@@ -99,7 +99,7 @@
    "id": "af7f5403-8949-4fd6-92ed-30b6de0894b5",
    "metadata": {},
    "source": [
-    ":::{prf:example}\n",
+    ":::{prf:example} Spans of 2 vectors in $\\mathbb{R}^3$\n",
     ":label:R3_ex1_span\n",
     "\n",
     "Let $\\vv v_1, \\vv v_2 \\in \\mathbb{R}^3$.\n",
@@ -121,7 +121,7 @@
     "tags": []
    },
    "source": [
-    ":::{exercise}\n",
+    ":::{exercise} Checking membership of in a span of vectors\n",
     ":label:span_ex2\n",
     "\n",
     "Let $W = \\textrm{span}\\{\\vv v_1, \\vv v_2\\} \\subset \\mathbb{R}^3$, where \n",
@@ -129,24 +129,49 @@
     "\\label{span_ex2_eqn}\n",
     "\\vv v_1 = \\bm 1 \\\\ 2 \\\\ 1 \\em, \\ \\vv v_2 = \\bm -2 \\\\ -3 \\\\ 5 \\em.\n",
     "\\end{equation}\n",
-    "Is the vector $\\vv v = \\bm 1 \\\\ 3 \\\\ 8 \\em$ an element of $W$?\n",
+    "Is the vector $\\vv v = \\bm 1 \\\\ 3 \\\\ 8 \\em$ an element of $W$? How about the vector $\\vv{\\tilde v} = \\bm 1\\\\0\\\\0 \\em$?\n",
     "\n",
     "```{solution} span_ex2\n",
     ":class: dropdown\n",
-    "If $\\vv v \\in W$, then we can find scalars $c_1, c_2 \\in \\mathbb{R}$ such that $\\vv v = c_1 \\vv v_1 + c_2 \\vv v_2$, that is,\n",
-    "\\begin{equation}\n",
-    "\\label{span_ex2_soln}\n",
-    "\\bm 1 \\\\ 3 \\\\ 8 \\em = c_1\\bm 1 \\\\ 2 \\\\ 1 \\em + c_2\\bm -2 \\\\ -3 \\\\ 5 \\em = \\bm c_1 - 2c_2 \\\\ 2c_1 - 3 c_2 \\\\ c_1 + 5c_2 \\em,\n",
-    "\\end{equation}\n",
-    "that is, $(c_1, c_2)$ should satisfy the linear system\n",
-    "\\begin{equation}\n",
-    "\\label{span_ex2_soln_sys}\n",
-    "c_1 - 2c_2 &= 1, \\\\\n",
-    "2c_1 - 3c_2 &= 3, \\\\\n",
-    "c_1 + 5c_2 &= 8.\n",
-    "\\end{equation}\n",
-    "Solving [](#span_ex2_soln_sys) using Gaussian elimination, we get $c_1 = 3, c_2 = 1$. However, $\\vv v = \\bm 1 \\\\ 3 \\\\ 2 \\em \\notin W$, since the corresponding system of equations will have no solution. \n",
+    "\n",
+    "If $\\vv v \\in W$ then we can find scalars $c_1, c_2 \\in \\mathbb R$ such that $\\vv v = c_1 \\vv{v_1} + c_1 \\vv{v_2}$, that is:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\bm 0&1&-1 \\em = c_1 \\bm 1\\\\-2\\\\1 \\em + c_2\\bm 2\\\\-3\\\\1\\em = \\bm c_1 + 2c_2\\\\-2c_1 - 3c_2\\\\c_1+c_2 \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "That is, $c_1$ and $c_2$ must satisfy the linear system:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    c_1 + 2c_2 &= 0\\\\\n",
+    "    -2c_1 - 3c_2 &= 1\\\\\n",
+    "    c_1 + c_2 &= -1\n",
+    "\\end{align*}\n",
+    "\n",
+    "which we solve using Gaussian Elimination to get $c_1 = -2, c_2 = 1$, so that $\\vv v = -2 \\vv{v_1} + \\vv{v_2} \\in W$. On the other hand, $\\vv{\\tilde v} = \\bm 1\\\\0\\\\0 \\em$ is not in $W$: setting up a similar system of equations, we would find it has no solution and hence $\\vv{\\tilde v} \\not\\in W$.\n",
+    "\n",
     "```\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0828049",
+   "metadata": {},
+   "source": [
+    ":::{prf:example} Span in a function space\n",
+    ":label:span_lin_ind-ex3\n",
+    "\n",
+    "Let $V = \\mathcal F(\\mathbb R)$ denote the space of scalar functions $f(x)$ defined on $\\mathbb R$. \n",
+    "\n",
+    "1. The span of the three monomials $f_1(x) = 1$, $f_2(x) = x$, $f_3(x) = x^2$ is the ste of functions of the form:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    f(x) = c_1f_1(x) + c_2f_2(x) + c_3f_3(x) = c_1 + c_2x + c_3x^2\n",
+    "\\end{align*}\n",
+    "\n",
+    "where $c_1, c_2, c_3 \\in \\mathbb R$ are arbitrary. But we've seen this before! $\\text{span} \\{1, x, x^2\\} = P^{(2)}$, the subspace of all polynomials of degree at most $2$.\n",
+    "\n",
     ":::"
    ]
   },
@@ -207,6 +232,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7a138320",
+   "metadata": {},
+   "source": [
+    ":::{prf:example}\n",
+    ":label:span_lin_ind-ex6\n",
+    "\n",
+    "The polynomials $p_1(x) = x - 2$, $p_2(x) = x^2 - 5x + 4$, $p_3(x) = 3x^2 - 4x$, $p_4(x) = x^2 - 1$ are linearly dependent since:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "p_1(x) + p_2(x) - p_3(x) + 2p_4(x) = 0 \\quad\\text{for all $x$}\n",
+    "\\end{align*}\n",
+    "\n",
+    "On the other hand, the three polynomials $p_1(x), p_2(x), p_3(x)$ are linearly independent. To see why, suppose \n",
+    "\n",
+    "\\begin{align*}\n",
+    "    c_1p_1(x) + c_2p_2(c) + c_3p_3(x) = (c_2 + 3c_3)x^2 + (c_1 - 5c_2 + 4c_3)x - 2c_1 + 4c_2 = 0 \\quad\\text{for all $x$}\n",
+    "\\end{align*}\n",
+    "\n",
+    "This is true if $c_2 + 3c_3 = 0, c_1 - 5c_2 - 4c_3 = 0, -2c_1 + 4c_2 = 0$, which only has the trivial solution $c_1 = c_2 = c_3 = 0$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b51a81e6-553c-46d7-b0f8-7e32475c1212",
    "metadata": {},
    "source": [
@@ -242,6 +290,87 @@
     "2. A collection of $k$ vectors in $\\mathbb{R}^n$ is linearly independent if and only if the equation $A \\vv c = \\vv 0$ has no free variables, that is, [rank](./026-linsys-general#rank_defn)($A$) = number of pivots = $k$. This requires $k \\leq n$. \n",
     "3. A collection of $k$ vectors span $\\mathbb{R}^n$ if and only if the corresponding $n \\times k$ matrix has rank $n$. This requires $k \\geq n$.\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "122dab45",
+   "metadata": {},
+   "source": [
+    ":::{exercise} Checking linear independence in $\\mathbb{R}^4$\n",
+    ":label:span_lin_ind-ex7\n",
+    "\n",
+    "Determine if the vectors \n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\bm 1\\\\2\\\\3\\\\4\\em,\n",
+    "\\bm 2\\\\3\\\\4\\\\5\\em,\n",
+    "\\bm 4\\\\1\\\\0\\\\-1\\em,\n",
+    "\\bm 4\\\\2\\\\2\\\\2\\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "are linearly independent or linearly dependent.\n",
+    "\n",
+    "```{solution} span_lin_ind-ex7\n",
+    ":class: dropdown\n",
+    "\n",
+    "To determine linear dependence, we check for nontrivial solutions to the system\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\bm 1&2&4&4\\\\2&3&1&2\\\\3&4&0&2\\\\4&5&-1&2 \\em \\vv x = \\vv 0\n",
+    "\\end{align*}\n",
+    "\n",
+    "The augmented matrix is given by\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\left[ \\begin{array}{cccc|c}\n",
+    "        1&2&4&4&0\\\\\n",
+    "        2&3&1&2&0\\\\\n",
+    "        3&4&0&2&0\\\\\n",
+    "        4&5&-1&2&0\n",
+    "    \\end{array}\\right]\n",
+    "\\end{align*}\n",
+    "\n",
+    "Putting the augmented matrix in row echelon form with Gaussian, we get the equivalent system\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\left[ \\begin{array}{cccc|c}\n",
+    "        1&2&4&4&0\\\\\n",
+    "        0&-1&-7&-6&0\\\\\n",
+    "        0&0&2&2&0\\\\\n",
+    "        0&0&0&0&0\n",
+    "    \\end{array}\\right]\n",
+    "\\end{align*}\n",
+    "\n",
+    "Let's use the pivots to eliminate the entries above them as well:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\left[ \\begin{array}{cccc|c}\n",
+    "        1&0&0&2&0\\\\\n",
+    "        0&-1&0&1&0\\\\\n",
+    "        0&0&2&2&0\\\\\n",
+    "        0&0&0&0&0\n",
+    "    \\end{array}\\right]\n",
+    "\\end{align*}\n",
+    "\n",
+    "This is equivalent to the linear system\n",
+    "\n",
+    "\\begin{align*}\n",
+    " x_1 + 2x_4 &= 0\\\\\n",
+    " -x_2 + x_4 &= 0\\\\\n",
+    " 2x_3 + 2x_4 &= 0\n",
+    "\\end{align*}\n",
+    "\n",
+    "which has the nontrivial solution\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\bm x_1\\\\x_2\\\\x_3\\\\x_4\\em = \\bm -2\\\\ 1\\\\ -1\\\\ 1 \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "Therefore the four given vectors are linearly dependent.\n",
+    "\n",
+    "```\n",
+    ":::"
    ]
   }
  ],
