034-basis_dim: added examples

--- a/Vector Spaces and Bases/034-basis_dim.ipynb
+++ b/Vector Spaces and Bases/034-basis_dim.ipynb
@@ -153,6 +153,68 @@
     "\\end{equation}\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecc72ec6",
+   "metadata": {},
+   "source": [
+    ":::{prf:example} Change of basis\n",
+    ":label:change_of_basis-ex1\n",
+    "\n",
+    "Consider the standard basis $B = \\{ \\vv e_1, \\vv e_2\\}$ for $\\mathbb R^2$. Then we have $\\bm x_1 \\\\x_2 \\em = x_1 \\vv e_1 + x_2 \\vv e_2$, and so the $B$-coordinates of $\\vv x$ are $x_1$ and $x_2$, as expected.\n",
+    "\n",
+    "What if we instead use he basis $B' = \\left\\{ \\bm 1\\\\1 \\em, \\bm 1\\\\-1 \\em \\right\\}$? We need to find coordinates $c_1$ and $c_2$ such that \n",
+    "\n",
+    "\\begin{align*}\n",
+    "    c_1\\bm 1 \\\\ 1\\em + c_2 \\bm 1\\\\ -1\\em = \\bm c_1 + c_2 \\\\ c_1 - c_2 \\em = \\bm x_1 \\\\ x_2 \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "This linear system has a solution (it must!), and it is $c_1 = \\frac{x_1 + x_2}{2}, c_1 = \\frac{x_1 - x_2}{2}$. In the coordinate system defined by $B'$, the coordinates for $\\bm x_1\\\\x_2 \\em$ are $\\frac\n",
+    " 1 2 \\bm x_1 + x_2 \\\\ x_1 - x_2 \\em$. \n",
+    " \n",
+    "Moving from basis $B$ to $B'$ is called a __change of basis__. Can you pose this as finding the solution to $A \\vv c = \\vv x$?\n",
+    "\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c9d29d5",
+   "metadata": {},
+   "source": [
+    ":::{prf:example} Isomorphic vector spaces\n",
+    ":label:isomorphisms-ex1\n",
+    "\n",
+    "Let $B = \\{ 1, x, x^2, x^3 \\}$ be the standard basis for $P^{(3)}$. A typical element $p(x) \\in P^{(3)}$ has the form $p(x) = a_0 + a_1x + a_2x^2 + a_3x^3$.\n",
+    "\n",
+    "We can read off the coordinates of $p(x)$ with respect to $B$, which we encode in the vector $\\vv p$:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\vv p = \\bm a_0 \\\\ a_1 \\\\ a_2 \\\\ a_3 \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "Notice that $\\vv p$ lives in $\\mathbb R^4$! Notice even further that the coefficients of the sum of polynomials:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    p(x) = a_0 + a_1x + a_2x^2 + a_3x^3, \\quad q(x) = b_0 + b_1x + b_2x^2 + b_3x^3\\\\\n",
+    "    p(x) + q(x) = (a_0 + b_0) + (a_1 + b_1)x + (a_2 + b_2)x^2 + (a_3 + b_3)x^3\n",
+    "\\end{align*}\n",
+    "\n",
+    "can be obtained by adding their $B$-coordinate vectors in $\\mathbb R^4$:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\vv p + \\vv q = \\bm a_0\\\\a_1\\\\a_2\\\\a_3 \\em + \\bm b_0\\\\b_1\\\\b_2\\\\b_3 \\em = \\bm a_2 + b_0 \\\\ a_1 + b_1 \\\\ a_2 + b_2 \\\\ a_3 + b_3 \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "You sohuld check that the same connection between $cp(x)$ and $c\\vv p$ also holds. By setting a suitable coordiante system (via a basis), working with elements of $P^{(3)}$, which are polynomial functions, can be turned into working with ordinary vectors in $\\mathbb{R}^4$!\n",
+    "\n",
+    "The idea of going back and forth between the vector spaces is captured in terms of a **vector space isomorphism**. We do not yet have all of the tools needed to define this rigorously, but for now, we will interpret it as meaning that **every vector space calculation in $V$ is accurately reproduced in $W$, and vice versa**.\n",
+    "\n",
+    "In the above example, we used that $P^{(3)}$ and $\\mathbb R^4$ **are isomorphic**, so we can add and scale either the polynomials directly, or work with their coefficient vectors in $\\mathbb R^4$. Even though they are closely related, **they are not the same thing**. Rather $P^{(3)}$ and $\\mathbb R^4$ are different ways of representing polynomials of degree $\\leq 3$, corrected via the chosen basis $B = \\{ 1, x, x^2 ,x^3\\}$.\n",
+    "\n",
+    ":::"
+   ]
   }
  ],
  "metadata": {
